--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="./images/cloverIcon.jpg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/bootswatch.min.css">
-    <link rel="stylesheet" href="./style/selfStyle.css">
+    <link rel="stylesheet" href="./css/bootswatch.min.css">
+    <link rel="stylesheet" href="./css/selfStyle.css">
 </head>
 
 <body>
