--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootswatch.min.css">
-    <link rel="stylesheet" href="./css/selfStyle.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <div style="height: 200px; padding: 10px; color: white" class="bg-secondary">
+    <div id="headline" class="bg-secondary">
         <header style="font-size: 5em;">Clover</header>
         <blockquote class="blockquote text-left">
-            <!-- <p class="mb-0">"Too many people spend money they earned, to buy things they don't want, to impress people that they don't like"</p>
-        <footer class="blockquote-footer">Will Rogers</footer> -->
             <p class="mb-0">"Anyone who tells you money can't buy hapiness never had any"</p>
             <footer class="blockquote-footer" style="color: black;">Samuel L. Jackson</footer>
         </blockquote>
-        <img src="./images/cloverLogo.gif" alt="Logo" width="170px" style="position: absolute; right: 10px; top: 10px">
+        <img src="./images/cloverLogo.gif" alt="Logo" width="170px">
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -49,7 +47,11 @@
         </div>
     </nav>
 
-    <page></page>
+    <page>
+        <h1 id="contentHeader"></h1>
+        <div id="container"></div>
+        <div id="otherPages"></div>
+    </page>
 
     <script src="js/main.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
