--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clover</title>
-    <link rel="icon" href="./images/cloverIcon.jpg">
+    <link rel="icon" href="./images/cloverIcon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootswatch.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="bg-light">
     <div id="headline" class="bg-secondary">
         <header style="font-size: 5em;">Clover</header>
         <blockquote class="blockquote text-left">
@@ -22,7 +22,7 @@
         <img src="./images/cloverLogo.gif" alt="Logo" width="170px">
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Clover</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,11 +47,11 @@
         </div>
     </nav>
 
-    <page>
+    <div id="content">
         <h1 id="contentHeader"></h1>
         <div id="container"></div>
         <div id="otherPages"></div>
-    </page>
+    </div>
 
     <script src="js/main.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
