progress modal & moreInfo button fixed

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         </div>
     </nav>
 
+    <div id="content">
+        <h1 id="contentHeader"></h1>
+        <div id="container"></div>
+        <div id="otherPages"></div>
+    </div>
+
     <div id="progressModal" class="modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -59,19 +65,13 @@
                     </div>
                     <div class="progress">
                         <div id="progressBar" class="progress-bar progress-bar-striped progress-bar-animated"
-                            role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                            role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div id="content">
-        <h1 id="contentHeader"></h1>
-        <div id="container"></div>
-        <div id="otherPages"></div>
-    </div>
-
+    
     <script src="js/main.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
