--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     </nav>
 
     <div id="content">
+        <div id="noCode" class="alert alert-dismissible alert-danger">
+            <strong>No Coin Code! </strong>Please enter full coin code and try again.
+        </div>
         <h1 id="contentHeader"></h1>
         <div id="container"></div>
         <div id="otherPages"></div>
@@ -71,7 +74,29 @@
             </div>
         </div>
     </div>
-    
+
+    <div id="chosenLimit" class="modal" style="background-color: rgba(0, 0, 0, 0.5)">
+        <div id="chosenModal" class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">You Have Reached The Limit</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>You can choose up to 5 different coins. Please remove one of the coins or press cancel.</p>
+                    <div id="chosenCoins"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="js/main.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
