--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="saveChanges" class="btn btn-primary">Save changes</button>
-                    <button type="button" id="cancelModal" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="cancelModal" class="btn btn-secondary"
+                        data-dismiss="modal">Cancel</button>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <script src="js/main.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -111,6 +112,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
